Compiler/src/syntax_analyzer.cpp
#include <cctype>
#include <cmath>

#include "assert.hpp"
#include "keywords.hpp"
#include "syntax_analyzer.hpp"

namespace U
{

namespace Synt
{

static int GetBinaryOperatorPriority( const BinaryOperatorType binary_operator )
{
	#define PRIORITY ( - __LINE__ )

	switch( binary_operator )
	{
	case BinaryOperatorType::Div:
	case BinaryOperatorType::Mul:
	case BinaryOperatorType::Rem:
		return PRIORITY;
	case BinaryOperatorType::Add:
	case BinaryOperatorType::Sub:
		return PRIORITY;
	case BinaryOperatorType::ShiftLeft :
	case BinaryOperatorType::ShiftRight:
		return PRIORITY;
	case BinaryOperatorType::Equal:
	case BinaryOperatorType::NotEqual:
	case BinaryOperatorType::Less:
	case BinaryOperatorType::LessEqual:
	case BinaryOperatorType::Greater:
	case BinaryOperatorType::GreaterEqual:
		return PRIORITY;
	case BinaryOperatorType::And: return PRIORITY;
	case BinaryOperatorType::Or: return PRIORITY;
	case BinaryOperatorType::Xor: return PRIORITY;
	case BinaryOperatorType::LazyLogicalAnd: return PRIORITY;
	case BinaryOperatorType::LazyLogicalOr: return PRIORITY;
	};

	U_ASSERT(false);
	return PRIORITY;

	#undef PRIORITY
};

static bool IsBinaryOperator( const Lexem& lexem )
{
	return
		lexem.type == Lexem::Type::Plus ||
		lexem.type == Lexem::Type::Minus ||
		lexem.type == Lexem::Type::Star ||
		lexem.type == Lexem::Type::Slash ||
		lexem.type == Lexem::Type::Percent ||

		lexem.type == Lexem::Type::CompareEqual ||
		lexem.type == Lexem::Type::CompareNotEqual ||
		lexem.type == Lexem::Type::CompareLess ||
		lexem.type == Lexem::Type::CompareLessOrEqual ||
		lexem.type == Lexem::Type::CompareGreater ||
		lexem.type == Lexem::Type::CompareGreaterOrEqual ||

		lexem.type == Lexem::Type::And ||
		lexem.type == Lexem::Type::Or ||
		lexem.type == Lexem::Type::Xor ||

		lexem.type == Lexem::Type::ShiftLeft  ||
		lexem.type == Lexem::Type::ShiftRight ||

		lexem.type == Lexem::Type::Conjunction ||
		lexem.type == Lexem::Type::Disjunction;
}

static BinaryOperatorType LexemToBinaryOperator( const Lexem& lexem )
{
	switch( lexem.type )
	{
		case Lexem::Type::Plus: return BinaryOperatorType::Add;
		case Lexem::Type::Minus: return BinaryOperatorType::Sub;
		case Lexem::Type::Star: return BinaryOperatorType::Mul;
		case Lexem::Type::Slash: return BinaryOperatorType::Div;
		case Lexem::Type::Percent: return BinaryOperatorType::Rem;

		case Lexem::Type::CompareEqual: return BinaryOperatorType::Equal;
		case Lexem::Type::CompareNotEqual: return BinaryOperatorType::NotEqual;
		case Lexem::Type::CompareLess: return BinaryOperatorType::Less;
		case Lexem::Type::CompareLessOrEqual: return BinaryOperatorType::LessEqual;
		case Lexem::Type::CompareGreater: return BinaryOperatorType::Greater;
		case Lexem::Type::CompareGreaterOrEqual: return BinaryOperatorType::GreaterEqual;

		case Lexem::Type::And: return BinaryOperatorType::And;
		case Lexem::Type::Or: return BinaryOperatorType::Or;
		case Lexem::Type::Xor: return BinaryOperatorType::Xor;

		case Lexem::Type::ShiftLeft : return BinaryOperatorType::ShiftLeft ;
		case Lexem::Type::ShiftRight: return BinaryOperatorType::ShiftRight;

		case Lexem::Type::Conjunction: return BinaryOperatorType::LazyLogicalAnd;
		case Lexem::Type::Disjunction: return BinaryOperatorType::LazyLogicalOr;

		default:
		U_ASSERT(false);
		return BinaryOperatorType::Add;
	};
}

static bool IsAdditiveAssignmentOperator( const Lexem& lexem )
{
	switch(lexem.type)
	{
		case Lexem::Type::AssignAdd:
		case Lexem::Type::AssignSub:
		case Lexem::Type::AssignMul:
		case Lexem::Type::AssignDiv:
		case Lexem::Type::AssignAnd:
		case Lexem::Type::AssignRem:
		case Lexem::Type::AssignOr :
		case Lexem::Type::AssignXor:
		case Lexem::Type::AssignShiftLeft :
		case Lexem::Type::AssignShiftRight:
			return true;
	};

	return false;
}

static BinaryOperatorType GetAdditiveAssignmentOperator( const Lexem& lexem )
{
	switch(lexem.type)
	{
		case Lexem::Type::AssignAdd: return BinaryOperatorType::Add;
		case Lexem::Type::AssignSub: return BinaryOperatorType::Sub;
		case Lexem::Type::AssignMul: return BinaryOperatorType::Mul;
		case Lexem::Type::AssignDiv: return BinaryOperatorType::Div;
		case Lexem::Type::AssignAnd: return BinaryOperatorType::And;
		case Lexem::Type::AssignRem: return BinaryOperatorType::Rem;
		case Lexem::Type::AssignOr : return BinaryOperatorType::Or;
		case Lexem::Type::AssignXor: return BinaryOperatorType::Xor;
		case Lexem::Type::AssignShiftLeft : return BinaryOperatorType::ShiftLeft;
		case Lexem::Type::AssignShiftRight: return BinaryOperatorType::ShiftRight;

		default:
		U_ASSERT(false);
		return BinaryOperatorType::Add;
	};
}

class SyntaxAnalyzer final
{
public:
	SyntaxAnalysisResult DoAnalyzis( const Lexems& lexems );

private:
	ProgramElements ParseNamespaceBody( Lexem::Type end_lexem );

	std::unique_ptr<NumericConstant> ParseNumericConstant();

	IExpressionComponentPtr ParseExpression();

	ITypeNamePtr ParseTypeName();
	ComplexName ParseComplexName();
	ReferencesTagsList ParseReferencesTagsList();
	FunctionReferencesPollutionList ParseFunctionReferencesPollutionList();

	IInitializerPtr ParseInitializer( bool parse_expression_initializer );
	std::unique_ptr<ArrayInitializer> ParseArrayInitializer();
	std::unique_ptr<StructNamedInitializer> ParseStructNamedInitializer();
	std::unique_ptr<ConstructorInitializer> ParseConstructorInitializer();
	std::unique_ptr<ExpressionInitializer> ParseExpressionInitializer();

	VariablesDeclarationPtr ParseVariablesDeclaration();
	std::unique_ptr<AutoVariableDeclaration> ParseAutoVariableDeclaration();

	IBlockElementPtr ParseReturnOperator();
	IBlockElementPtr ParseWhileOperator();
	IBlockElementPtr ParseBreakOperator();
	IBlockElementPtr ParseContinueOperator();
	IBlockElementPtr ParseIfOperator();
	std::unique_ptr<StaticAssert> ParseStaticAssert();
	std::unique_ptr<Enum> ParseEnum();
	IBlockElementPtr ParseHalt();

	BlockPtr ParseBlock();

	ClassKindAttribute TryParseClassKindAttribute();
	std::vector<ComplexName> TryParseClassParentsList();

	std::unique_ptr<Typedef> ParseTypedef();
	std::unique_ptr<Typedef> ParseTypedefBody();
	std::unique_ptr<Function> ParseFunction();
	std::unique_ptr<Class> ParseClass();
	std::unique_ptr<Class> ParseClassBody();

	TemplateBasePtr ParseTemplate();

	void PushErrorMessage( const Lexem& lexem );

private:
	SyntaxErrorMessages error_messages_;
	Lexems::const_iterator it_;
	Lexems::const_iterator it_end_;
};

SyntaxAnalysisResult SyntaxAnalyzer::DoAnalyzis( const Lexems& lexems )
{
	SyntaxAnalysisResult result;

	it_= lexems.begin();
	it_end_= lexems.end();

	while( it_ < it_end_ )
	{
		if( !( it_->type == Lexem::Type::Identifier && it_->text == Keywords::import_ ) )
			break;
		++it_; U_ASSERT( it_ < it_end_ );

		if( it_->type != Lexem::Type::String )
		{
			PushErrorMessage( *it_ );
			break;
		}

		result.imports.emplace_back( it_->file_pos );
		result.imports.back().import_name= it_->text;
		++it_;
	}

	while( it_ < it_end_ )
	{
		result.program_elements= ParseNamespaceBody( Lexem::Type::EndOfFile );
		++it_;
	}

	result.error_messages.swap( error_messages_ );
	return result;
}

ProgramElements SyntaxAnalyzer::ParseNamespaceBody( const Lexem::Type end_lexem )
{
	ProgramElements program_elements;

	while( it_ < it_end_ )
	{
		if( it_->type == Lexem::Type::Identifier && ( it_->text == Keywords::fn_ || it_->text == Keywords::op_ ) )
		{
			if( IProgramElementPtr program_element= ParseFunction() )
				program_elements.emplace_back( std::move( program_element ) );
		}
		else if( it_->type == Lexem::Type::Identifier && ( it_->text == Keywords::struct_ || it_->text == Keywords::class_ ) )
		{
			if( IProgramElementPtr program_element= ParseClass() )
				program_elements.emplace_back( std::move( program_element ) );
		}
		else if( it_->type == Lexem::Type::Identifier && it_->text == Keywords::template_ )
		{
			if( TemplateBasePtr template_= ParseTemplate() )
			{
				if( IProgramElement* const program_element= dynamic_cast<IProgramElement*>(template_.get()) )
				{
					template_.release();
					program_elements.emplace_back( program_element );
				}
				else
				{
					// TODO - push more relevant message.
					PushErrorMessage( *it_ );
				}
			}
		}
		else if( it_->type == Lexem::Type::Identifier && it_->text == Keywords::var_ )
		{
			if( IProgramElementPtr program_element= ParseVariablesDeclaration() )
				program_elements.emplace_back( std::move(program_element) );
		}
		else if( it_->type == Lexem::Type::Identifier && it_->text == Keywords::auto_ )
		{
			if( IProgramElementPtr program_element= ParseAutoVariableDeclaration() )
				program_elements.emplace_back( std::move(program_element) );
		}
		else if( it_->type == Lexem::Type::Identifier && it_->text == Keywords::static_assert_ )
		{
			if( IProgramElementPtr program_element= ParseStaticAssert() )
				program_elements.emplace_back( std::move(program_element) );
		}
		else if( it_->type == Lexem::Type::Identifier && it_->text == Keywords::enum_ )
		{
			if( IProgramElementPtr program_element= ParseEnum() )
				program_elements.emplace_back( std::move(program_element) );
		}
		else if( it_->type == Lexem::Type::Identifier && it_->text == Keywords::type_ )
		{
			if( IProgramElementPtr program_element= ParseTypedef() )
				program_elements.emplace_back( std::move(program_element) );
		}
		else if( it_->type == Lexem::Type::Identifier && it_->text == Keywords::namespace_ )
		{
			++it_; U_ASSERT( it_ < it_end_ );

			ProgramString name;
			if( it_->type != Lexem::Type::Identifier )
			{
				PushErrorMessage( *it_ );
				return program_elements;
			}
			name= it_->text;
			++it_; U_ASSERT( it_ < it_end_ );

			if( it_->type != Lexem::Type::BraceLeft )
			{
				PushErrorMessage( *it_ );
				return program_elements;
			}
			++it_; U_ASSERT( it_ < it_end_ );

			std::unique_ptr<Namespace> namespace_( new Namespace( (it_-2)->file_pos ) );
			namespace_->name_= std::move(name);
			namespace_->elements_= ParseNamespaceBody( Lexem::Type::BraceRight );
			program_elements.push_back( std::move( namespace_ ) );
		}
		else if( it_->type == end_lexem )
		{
			// End of namespace
			++it_;
			return program_elements;
		}
		else
		{
			PushErrorMessage( *it_ );
			return program_elements;
		}
	} // while not end of file

	return program_elements;
}

std::unique_ptr<NumericConstant> SyntaxAnalyzer::ParseNumericConstant()
{
	const ProgramString& text= it_->text;

	NumericConstant::LongFloat base= 10;
	unsigned int (*number_func)( sprache_char) =
		[]( sprache_char c ) -> unsigned int
		{
			U_ASSERT( c >= '0' && c <= '9' );
			return c - '0';
		};

	bool (*is_number_func)( sprache_char) =
		[]( sprache_char c ) -> bool { return std::isdigit(c); };

	ProgramString::const_iterator it= text.begin();
	const ProgramString::const_iterator it_end= text.end();

	if( text.size() >= 2 && text[0] == '0' )
	{
		sprache_char d= text[1];
		switch(d)
		{
		case 'b':
			it+= 2;
			base= 2;
			number_func=
				[]( sprache_char c ) -> unsigned int
				{
					U_ASSERT( c >= '0' && c <= '1' );
					return c - '0';
				};
			is_number_func=
				[]( sprache_char c ) -> bool
				{
					return c == '0' || c == '1';
				};
			break;

		case 'o':
			it+= 2;
			base= 8;
			number_func=
				[]( sprache_char c ) -> unsigned int
				{
					U_ASSERT( c >= '0' && c <= '7' );
					return c - '0';
				};
			is_number_func=
				[]( sprache_char c ) -> bool
				{
					return c >= '0' && c <= '9';
				};
			break;

		case 'x':
			it+= 2;
			base= 16;
			number_func=
				[]( sprache_char c ) -> unsigned int
				{
					if( c >= '0' && c <= '9' )
						return c - '0';
					else if( c >= 'a' && c <= 'f' )
						return c - 'a' + 10;
					else
					{
						U_ASSERT( c >= 'A' && c <= 'F' );
						return c - 'A' + 10;
					}
				};
			is_number_func= []( sprache_char c ) -> bool { return std::isxdigit(c); };
			break;

		default: break;
		};
	}

	NumericConstant::LongFloat number{ 0 };
	bool has_fraction_point= false;

	ProgramString::const_iterator integer_part_end= it;
	while( integer_part_end < it_end &&
		is_number_func( *integer_part_end ) )
		++integer_part_end;

	{
		NumericConstant::LongFloat pow{ 1 };
		for( auto n= integer_part_end - 1; n >= it; --n, pow*= base )
			number+= number_func(*n) * pow;
	}

	it= integer_part_end;
	if( it < it_end && *it == '.' )
	{
		++it;
		has_fraction_point= true;

		NumericConstant::LongFloat fractional_part{ 0 };
		NumericConstant::LongFloat pow{ 1 / base };

		while( it < it_end && is_number_func(*it) )
		{
			fractional_part+= number_func( *it ) * pow;
			pow/= base;
			++it;
		}

		number+= fractional_part;
	}

	// Exponent
	if( it < it_end && *it == 'e' )
	{
		++it;

		U_ASSERT( base == 10 );
		int power= 0;
		bool is_negative= false;

		if( it < it_end && *it == '-' )
		{
			is_negative= true;
			++it;
		}

		while( it < it_end && is_number_func(*it) )
		{
			power*= base;
			power+= number_func(*it);
			++it;
		}
		if( is_negative ) power= -power;

		number*= std::pow<NumericConstant::LongFloat>( base, power );
	}

	ProgramString type_suffix( it, it_end );

	return
		std::unique_ptr<NumericConstant>(
			new NumericConstant(
				it_->file_pos,
				number,
				std::move( type_suffix ),
				has_fraction_point ) );
}

IExpressionComponentPtr SyntaxAnalyzer::ParseExpression()
{
	IExpressionComponentPtr root;

	while(1)
	{
		PrefixOperators prefix_operators;

		// Prefix operators.
		while(1)
		{
			switch( it_->type )
			{
			case Lexem::Type::Identifier:
			case Lexem::Type::Scope:
			case Lexem::Type::Number:
			case Lexem::Type::BracketLeft:
			case Lexem::Type::SquareBracketLeft:
				goto parse_operand;

			case Lexem::Type::Plus:
				 prefix_operators.emplace_back( new UnaryPlus( it_->file_pos ) );
				++it_;
				break;

			case Lexem::Type::Minus:
				prefix_operators.emplace_back( new UnaryMinus( it_->file_pos ) );
				++it_;
				break;

			case Lexem::Type::Not:
				prefix_operators.emplace_back( new LogicalNot( it_->file_pos ) );
				++it_;
				break;

			case Lexem::Type::Tilda:
				prefix_operators.emplace_back( new BitwiseNot( it_->file_pos ) );
				++it_;
				break;

			default:
				if( prefix_operators.empty() )
					return root;
				else
				{
					PushErrorMessage( *it_ );
					return nullptr;
				}
			};
		}

	parse_operand:
		ExpressionComponentWithUnaryOperatorsPtr current_node;

		// Operand.
		if( it_->type == Lexem::Type::Identifier )
		{
			if( it_->text == Keywords::true_ )
			{
				current_node.reset( new BooleanConstant( it_->file_pos, true ) );
				++it_;
			}
			else if( it_->text == Keywords::false_ )
			{
				current_node.reset( new BooleanConstant( it_->file_pos, false ) );
				++it_;
			}
			else
				current_node.reset( new NamedOperand( it_->file_pos, ParseComplexName() ) );
		}
		else if( it_->type == Lexem::Type::Scope )
		{
			current_node.reset( new NamedOperand( it_->file_pos, ParseComplexName() ) );
		}
		else if( it_->type == Lexem::Type::Number )
		{
			current_node= ParseNumericConstant();
			++it_;
		}
		else if( it_->type == Lexem::Type::BracketLeft )
		{
			++it_;

			current_node.reset(
				new BracketExpression(
					(it_-1)->file_pos,
					ParseExpression() ) );

			U_ASSERT( it_ < it_end_ );
			if( it_->type != Lexem::Type::BracketRight )
			{
				PushErrorMessage( *it_ );
				return nullptr;
			}
			++it_;
		}
		else if( it_->type == Lexem::Type::SquareBracketLeft )
		{
			// Parse array type name: [ ElementType, 42 ]
			std::unique_ptr<TypeNameInExpression> type_name_in_expression( new TypeNameInExpression( it_->file_pos ) );
			type_name_in_expression->type_name= ParseTypeName();
			current_node= std::move(type_name_in_expression);
		}
		else
		{
			U_ASSERT(false);
		}

		current_node->prefix_operators_= std::move( prefix_operators );

		bool is_binary_operator= false;
		// Postfix operators.
		bool end_postfix_operators= false;
		while( !end_postfix_operators )
		{
			switch( it_->type )
			{
			case Lexem::Type::SquareBracketLeft:
				{
					++it_;
					U_ASSERT( it_ < it_end_ );

					current_node->postfix_operators_.emplace_back(
						new IndexationOperator(
							(it_-1)->file_pos,
							ParseExpression() ) );

					U_ASSERT( it_ < it_end_ );
					if( it_->type != Lexem::Type::SquareBracketRight )
					{
						PushErrorMessage( *it_ );
						return nullptr;
					}
					++it_;
				}
				break;

			case Lexem::Type::BracketLeft:
				{
					const FilePos& call_operator_pos= it_->file_pos;

					++it_;
					U_ASSERT( it_ < it_end_ );

					std::vector<IExpressionComponentPtr> arguments;
					while(1)
					{
						if( it_->type == Lexem::Type::BracketRight )
						{
							++it_;
							break;
						}

						arguments.emplace_back( ParseExpression() );

						if( it_->type == Lexem::Type::Comma )
						{
							++it_;
							if( it_->type == Lexem::Type::BracketRight )
							{
								PushErrorMessage( *it_ );
								return nullptr;
							}
						}
						else if( it_->type == Lexem::Type::BracketRight )
						{
							++it_;
							break;
						}
					}

					current_node->postfix_operators_.emplace_back(
						new CallOperator(
							call_operator_pos,
							std::move( arguments ) ) );

				} break;

			case Lexem::Type::Dot:
				{
					++it_; U_ASSERT( it_ < it_end_ );

					if( it_->type != Lexem::Type::Identifier )
					{
						PushErrorMessage( *it_ );
						return nullptr;
					}

					current_node->postfix_operators_.emplace_back(
						new MemberAccessOperator(
								(it_-1)->file_pos,
								it_->text ) );

					++it_; U_ASSERT( it_ < it_end_ );
				} break;

			default:
				is_binary_operator= IsBinaryOperator( *it_ );
				end_postfix_operators= true;
				break;
			};

			if( end_postfix_operators )
				break;
		}

		if( root == nullptr )
		{
			root= std::move( current_node );
		}
		else
		{
			BinaryOperator* const root_as_binary_operator= dynamic_cast<BinaryOperator*>( root.get() );
			U_ASSERT( root_as_binary_operator != nullptr );

			// Place to existent tree last component.
			BinaryOperator* most_right_with_null= root_as_binary_operator;
			while( most_right_with_null->right_ != nullptr )
			{
				BinaryOperator* const right_as_binary_operator= dynamic_cast<BinaryOperator*>( most_right_with_null->right_.get() );
				U_ASSERT( right_as_binary_operator != nullptr );
				most_right_with_null= right_as_binary_operator;
			}
			most_right_with_null->right_= std::move( current_node );
		}

		if( is_binary_operator )
		{
			const BinaryOperatorType binary_operator_type= LexemToBinaryOperator( *it_ );
			std::unique_ptr<BinaryOperator> binary_operator( new BinaryOperator( it_->file_pos ) );
			binary_operator->operator_type_= binary_operator_type;
			++it_;
			U_ASSERT( it_ < it_end_ );

			if( BinaryOperator* const root_as_binary_operator= dynamic_cast<BinaryOperator*>( root.get() ) )
			{
				BinaryOperator* node_to_replace_parent= nullptr;
				BinaryOperator* node_to_replace= root_as_binary_operator;
				while( GetBinaryOperatorPriority( binary_operator->operator_type_ ) > GetBinaryOperatorPriority( node_to_replace->operator_type_ ) )
				{
					node_to_replace_parent= node_to_replace;
					BinaryOperator* const right_as_binary_operator= dynamic_cast<BinaryOperator*>( node_to_replace->right_.get() );
					if( right_as_binary_operator == nullptr )
						break;
					node_to_replace= right_as_binary_operator;
				}

				if( node_to_replace_parent != nullptr )
				{
					binary_operator->left_= std::move( node_to_replace_parent->right_ );
					node_to_replace_parent->right_= std::move( binary_operator );
				}
				else
				{
					binary_operator->left_= std::move( root );
					root= std::move( binary_operator );
				}
			}
			else
			{
				binary_operator->left_= std::move( root );
				root= std::move( binary_operator );
			}
		}
		else
			break;
	}

	return root;
}

ITypeNamePtr SyntaxAnalyzer::ParseTypeName()
{
	U_ASSERT( it_ < it_end_ );
	if( it_->type == Lexem::Type::SquareBracketLeft )
	{
		++it_; U_ASSERT( it_ < it_end_ );

		std::unique_ptr<ArrayTypeName> array_type_name( new ArrayTypeName(it_->file_pos) );
		array_type_name->element_type= ParseTypeName();

		if( it_->type != Lexem::Type::Comma )
		{
			PushErrorMessage( *it_ );
			return std::move(array_type_name);
		}
		++it_; U_ASSERT( it_ < it_end_ );

		array_type_name->size= ParseExpression();

		if( it_->type != Lexem::Type::SquareBracketRight )
		{
			PushErrorMessage( *it_ );
			return std::move(array_type_name);
		}
		++it_; U_ASSERT( it_ < it_end_ );

		return std::move(array_type_name);
	}
	else
	{
		std::unique_ptr<NamedTypeName> named_type_name( new NamedTypeName(it_->file_pos) );
		named_type_name->name= ParseComplexName();
		return std::move(named_type_name);
	}
}

ComplexName SyntaxAnalyzer::ParseComplexName()
{
	ComplexName complex_name;

	if( !( it_->type == Lexem::Type::Identifier || it_->type == Lexem::Type::Scope ) )
	{
		PushErrorMessage( *it_ );
		return complex_name;
	}

	if( it_->type == Lexem::Type::Scope )
	{
		complex_name.components.emplace_back();
		++it_; U_ASSERT( it_ < it_end_ );
	}

	do
	{
		if( it_->type != Lexem::Type::Identifier )
		{
			PushErrorMessage( *it_ );
			return complex_name;
		}
		complex_name.components.emplace_back();
		complex_name.components.back().name= it_->text;
		++it_; U_ASSERT( it_ < it_end_ );

		if( it_->type == Lexem::Type::TemplateBracketLeft )
		{
			complex_name.components.back().have_template_parameters= true;

			++it_; U_ASSERT( it_ < it_end_ );
			while(true)
			{
				if( it_->type == Lexem::Type::TemplateBracketRight )
				{
					++it_; U_ASSERT( it_ < it_end_ );
					break;
				}

				complex_name.components.back().template_parameters.push_back( ParseExpression() );

				if( it_->type == Lexem::Type::Comma )
				{
					++it_; U_ASSERT( it_ < it_end_ );
					if( it_->type == Lexem::Type::TemplateBracketRight )
					{
						PushErrorMessage( *it_ );
						return complex_name;
					}
				}
			}
		}

		if( it_->type == Lexem::Type::Scope )
		{
			++it_; U_ASSERT( it_ < it_end_ );
		}
		else
			break;

	} while(true);

	return complex_name;
}

ReferencesTagsList SyntaxAnalyzer::ParseReferencesTagsList()
{
	U_ASSERT( it_->type == Lexem::Type::Apostrophe );
	++it_; U_ASSERT( it_ < it_end_ );

	ReferencesTagsList result;

	if( it_->type == Lexem::Type::Apostrophe )
	{
		// Empty list
		++it_; U_ASSERT( it_ < it_end_ );
		return result;
	}

	while(1)
	{
		if( it_->type == Lexem::Type::Identifier )
		{
			result.push_back( it_->text );
			++it_;
		}
		else
		{
			PushErrorMessage( *it_ );
			return result;
		}

		if( it_->type == Lexem::Type::Comma )
		{
			++it_; U_ASSERT( it_ < it_end_ );
			if( it_->type == Lexem::Type::Apostrophe ) // Disable things, like 'a, b, c,'
			{
				PushErrorMessage( *it_ );
				return result;
			}
		}
		else if( it_->type == Lexem::Type::Apostrophe )
		{
			++it_; U_ASSERT( it_ < it_end_ );
			break;
		}
	}

	return result;
}

FunctionReferencesPollutionList SyntaxAnalyzer::ParseFunctionReferencesPollutionList()
{
	U_ASSERT( it_->type == Lexem::Type::Apostrophe );
	++it_; U_ASSERT( it_ < it_end_ );

	FunctionReferencesPollutionList result;

	if( it_->type == Lexem::Type::Apostrophe )
	{
		// Empty list
		++it_; U_ASSERT( it_ < it_end_ );
		return result;
	}

	while(1)
	{
		if( it_->type == Lexem::Type::Identifier )
		{
			result.emplace_back();
			result.back().first = it_->text;
			++it_;
		}
		else
		{
			PushErrorMessage( *it_ );
			return result;
		}

		if( it_->type != Lexem::Type::LeftArrow )
		{
			PushErrorMessage( *it_ );
			return result;
		}
		++it_; U_ASSERT( it_ < it_end_ );

		if( it_->type == Lexem::Type::Identifier )
		{
			if( it_->text == Keywords::mut_ )
			{
				result.back().second.is_mutable= true;
				++it_; U_ASSERT( it_ < it_end_ );
			}
			else if( it_->text == Keywords::imut_ )
			{
				result.back().second.is_mutable= false;
				++it_; U_ASSERT( it_ < it_end_ );
			}
		}

		if( it_->type == Lexem::Type::Identifier )
		{
			result.back().second.name= it_->text;
			++it_;
		}
		else
		{
			PushErrorMessage( *it_ );
			return result;
		}

		if( it_->type == Lexem::Type::Comma )
		{
			++it_; U_ASSERT( it_ < it_end_ );
			if( it_->type == Lexem::Type::Apostrophe ) // Disable things, like 'a, b, c,'
			{
				PushErrorMessage( *it_ );
				return result;
			}
		}
		else if( it_->type == Lexem::Type::Apostrophe )
		{
			++it_; U_ASSERT( it_ < it_end_ );
			break;
		}
	}

	return result;
}

IInitializerPtr SyntaxAnalyzer::ParseInitializer( const bool parse_expression_initializer )
{
	U_ASSERT( it_ < it_end_ );

	if( it_->type == Lexem::Type::SquareBracketLeft )
	{
		return ParseArrayInitializer();
	}
	else if( it_->type == Lexem::Type::BracketLeft )
	{
		return ParseConstructorInitializer();
	}
	else if( it_->type == Lexem::Type::BraceLeft )
	{
		return ParseStructNamedInitializer();
	}
	else if( it_->type == Lexem::Type::Identifier && it_->text == Keywords::zero_init_ )
	{
		const auto prev_it= it_;
		++it_;
		return IInitializerPtr( new ZeroInitializer( prev_it->file_pos ) );
	}
	else if( parse_expression_initializer )
	{
		// In some cases usage of expression in initializer is forbidden.
		return ParseExpressionInitializer();
	}
	else
	{
		PushErrorMessage( *it_ );
		return nullptr;
	}
}

std::unique_ptr<ArrayInitializer> SyntaxAnalyzer::ParseArrayInitializer()
{
	U_ASSERT( it_ < it_end_ );
	U_ASSERT( it_->type == Lexem::Type::SquareBracketLeft );

	std::unique_ptr<ArrayInitializer> result( new ArrayInitializer( it_->file_pos ) );
	++it_;
	U_ASSERT( it_ < it_end_ );

	while( it_ < it_end_ && it_->type != Lexem::Type::SquareBracketRight )
	{
		result->initializers.push_back( ParseInitializer( true ) );
		U_ASSERT( it_ < it_end_ );
		if( it_->type == Lexem::Type::Comma )
			++it_;
		else
			break;
		// TODO - parse continious flag here
	}
	if( it_ == it_end_ || it_->type != Lexem::Type::SquareBracketRight )
	{
		PushErrorMessage( *it_ );
		return result;
	}

	++it_;

	return result;
}

std::unique_ptr<StructNamedInitializer> SyntaxAnalyzer::ParseStructNamedInitializer()
{
	U_ASSERT( it_ < it_end_ );
	U_ASSERT( it_->type == Lexem::Type::BraceLeft );

	std::unique_ptr<StructNamedInitializer> result( new StructNamedInitializer( it_->file_pos ) );
	++it_;
	U_ASSERT( it_ < it_end_ );
